--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,22 @@
 body {
+  display: flex;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: url("/imagens/hero.jpeg") no-repeat center center fixed;
+  background: url("../imagens/hero.jpeg") no-repeat center center fixed;
   background-size: cover;
   color: #fff;
-  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+.tudo {
+  backdrop-filter: blur(10px);
+}
+
+.selected-seat {
+  background-color: red;
+  pointer-events: none;
 }
 
 .inputForm {
@@ -35,7 +46,7 @@ body {
   padding: 10px;
   font-size: 16px;
   font-weight: bold;
-  background-color: #4388cc;
+  background-color:#2e1c5f;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -44,13 +55,13 @@ body {
 }
 
 .inputForm button:hover {
-  background-color: #316ba6;
+  background-color:#8a3ec9;
 }
 
 .screen {
   width: 100%;
   height: 20px;
-  background: #4388cc;
+  background-color: #2e1c5f;
   color: #fff;
   text-align: center;
   line-height: 20px;
@@ -112,6 +123,16 @@ table {
   text-align: center;
 }
 
+.seatStructure {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.651);
+  border-radius: 3%;
+  max-width: fit-content;
+  align-items: center;
+  justify-content: center;
+}
+
 textarea {
   border: none;
   background: transparent;
@@ -131,13 +152,14 @@ textarea {
   padding: 10px;
   font-size: 16px;
   font-weight: bold;
-  background-color: #4388cc;
+  background-color: #2e1c5f;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  max-width: 50%;
 }
 
 #confirmSelectionButton:hover {
-  background-color: #316ba6;
+  background-color: #8a3ec9;
 }
